--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -1818,8 +1818,7 @@ hover {
   padding-left: 1.25rem;
   padding-right: 0.9375rem;
   -ms-flex-align: center;
-      align-items: center;
-  background-color: grey; }
+      align-items: center; }
 
 h1,
 h2,
@@ -1833,7 +1832,8 @@ h1 {
   line-height: 2.625rem; }
 
 h2 {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  line-height: 2.125rem; }
 
 h3 {
   font-size: 1.4rem;
@@ -1875,14 +1875,8 @@ p {
         justify-content: center;
     margin-top: 1.5625rem;
     margin-bottom: 1.875rem; }
-    @media screen and (max-width: 768px) {
-      .nw-program .nw-img {
-        width: 50%;
-        -ms-flex-item-align: center;
-            -ms-grid-row-align: center;
-            align-self: center; } }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 768px) {
   .nw-part1 {
     display: -ms-flexbox;
     display: flex;
@@ -1913,18 +1907,58 @@ p {
       -ms-flex-positive: 1;
           flex-grow: 1;
       width: 120%; } }
+  @media (min-width: 768px) {
+    .funding .funding-img img {
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+      width: 120%; } }
+  @media (min-width: 768px) {
+    .funding .money-spend-img img {
+      padding-right: 4rem;
+      padding-left: .4rem; } }
+  @media (min-width: 768px) {
+    .funding .nw-part2 {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+          flex-direction: row;
+      -ms-flex-align: center;
+          align-items: center; }
+      .funding .nw-part2 .red-border-container {
+        width: 82%;
+        display: -ms-flexbox;
+        display: flex; } }
+  @media (min-width: 768px) {
+    .funding .nw-part3 {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+          align-items: center;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
+    .funding .money-spend-para {
+      -ms-flex-negative: 5;
+          flex-shrink: 5; } }
   .funding .funding-btn {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
         justify-content: center;
     margin-top: 1.875rem; }
+    @media (min-width: 768px) {
+      .funding .funding-btn {
+        -ms-flex-pack: end;
+            justify-content: flex-end; } }
     .funding .funding-btn .green-btn {
       padding: 1rem;
       width: 44.666%;
       -ms-flex-pack: center;
           justify-content: center;
       margin-right: 2px; }
+      @media (min-width: 768px) {
+        .funding .funding-btn .green-btn {
+          padding: 1.2rem;
+          width: 18%; } }
 
 .school-list {
   display: -ms-flexbox;
@@ -1942,6 +1976,13 @@ p {
     .school-list .school-img .address .phone {
       font-weight: bolder; }
 
+@media (min-width: 768px) {
+  Preschools List Section
+.preschools-list h1 {
+    width: 55%;
+    padding: 1.7rem;
+    border-top: solid 3px #4FC8A1; } }
+
 .enroll {
   border-top: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem;
@@ -1949,8 +1990,21 @@ p {
   display: flex;
   -ms-flex-direction: column;
       flex-direction: column; }
+  @media (min-width: 768px) {
+    .enroll .enrollment-wrap {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+      .enroll .enrollment-wrap .guids {
+        -ms-flex-negative: 3.5;
+            flex-shrink: 3.5;
+        padding-right: 1rem; } }
   .enroll .enroll-info {
     margin-top: 3rem; }
+    @media (min-width: 768px) {
+      .enroll .enroll-info {
+        margin-top: 2rem; } }
   .enroll .enroll-block {
     max-width: 70%;
     display: -ms-flexbox;
@@ -1984,6 +2038,8 @@ p {
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
+    -ms-flex: 100%;
+        flex: 100%;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
@@ -1992,6 +2048,10 @@ p {
       .teacher-list .teacher-grid {
         -ms-flex-direction: row;
             flex-direction: row; } }
+  @media screen and (max-width: 768px) and (min-width: 768px) {
+    .teacher-list .teacher-grid {
+      -ms-flex-direction: row;
+          flex-direction: row; } }
     .teacher-list .teacher-grid .teacher-block {
       -ms-flex: 33%;
           flex: 33%;
@@ -2001,9 +2061,10 @@ p {
           flex-direction: column;
       -ms-flex-align: center;
           align-items: center; }
-      @media screen and (max-width: 768px) {
+      @media (min-width: 768px) {
         .teacher-list .teacher-grid .teacher-block {
-          max-width: 990px;
+          -ms-flex: 18%;
+              flex: 18%;
           -ms-flex: 1;
               flex: 1; } }
     .teacher-list .teacher-grid .flip-container {
@@ -2050,8 +2111,8 @@ p {
         transform: rotateY(180deg); }
         @media screen and (max-width: 768px) {
           .teacher-list .teacher-grid .flip-container .back {
-            width: 200px;
-            height: 200px;
+            width: 180px;
+            height: 180px;
             right: 4px;
             top: 55px; } }
     .teacher-list .teacher-grid .flip-container.hover .flipper,
@@ -2062,13 +2123,13 @@ p {
     .teacher-list .teacher-grid .front {
       width: 125px;
       height: 125px; }
-      @media screen and (min-width: 768px) {
+      @media screen and (max-width: 768px) {
         .teacher-list .teacher-grid .back,
         .teacher-list .teacher-grid .flip-container,
         .teacher-list .teacher-grid .front {
-          width: 190px;
-          height: 190px; } }
-      @media screen and (max-width: 768px) {
+          width: 180px;
+          height: 180px; } }
+      @media (min-width: 768px) {
         .teacher-list .teacher-grid .back,
         .teacher-list .teacher-grid .flip-container,
         .teacher-list .teacher-grid .front {
