--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -113,7 +113,7 @@
             padding-top: 70px;
         }
         p {
-            width: 377px;
+            width: 380px;
             font-family: "Noto Sans";
             font-size: 20px;
             line-height: 40px;
@@ -212,9 +212,11 @@
                     font-family: "Asap";
                     font-size: 48px;
                     line-height: 55px;
-                    margin: 0;
+                    margin: 45px 0px;
                     box-sizing: border-box;
-                    width: 1283px;
+                    width: 100%;
+                    padding: 45px 0px;
+
                 }
             }
             .support-img-wrapper {
@@ -243,20 +245,22 @@
                         position: relative;
                         right: -950px;
                         width: 25%;
+                        font-size: 18px;
                     }
                 }
             }
             //support-wrapper
             blockquote {
-                border-left: 6px solid #D93B57;
+                border-left: 14px solid #D93B57;
                 font-size: 25px;
                 margin-bottom: 95px;
                 height: 125px;
                 @include desktop {
-                    border-left: 6px solid #D93B57;
+                    border-left: 14px solid #D93B57;
                     margin: 27px 119px;
                     width: 70%;
                     height: auto;
+                    padding: 0px;
                     p {
                         font-size: 24px;
                     }
@@ -270,12 +274,13 @@
                 color: #000;
                 margin: 40px;
                 @include desktop {
-                    width: 61%;
+                    width: 65%;
                     font-family: 'Noto Sans';
-                    font-size: 22px;
                     line-height: 47px;
                     letter-spacing: 0.9px;
-                    margin: 30px 40px;
+                    margin: 10px 30px;
+
+                    // margin: 30px 40px;
                 }
                 .info {
                     width: 470px;
@@ -292,6 +297,8 @@
                 display: flex;
                 justify-content: space-around;
                 width: 65%;
+                margin: 60px 0px;
+
                 .red-btn {
                     width: 185px;
                     height: 47px;
@@ -401,8 +408,9 @@
               flex-wrap: wrap;
               position: relative;
               @include desktop {
+                display: flex;
                   width: 300px;
-                  height: 300px;
+                  height: auto;
                   background-color: #AFF1D3;
                   -webkit-transition: 3s;
                   -webkit-transform-style: preserve-3d;
@@ -433,6 +441,9 @@
                     -moz-backface-visibility: hidden;
                     -o-backface-visibility: hidden;
                     backface-visibility: hidden;
+                    @include desktop{
+                      display: flex;
+                    }
                 }
                 .features-back {
                     // width: 480px;
@@ -453,6 +464,9 @@
                     -moz-transform: rotateY(180deg);
                     -o-transform: rotateY(180deg);
                     transform: rotateY(180deg);
+                    @include desktop{
+                      display: flex;
+                    }
                 }
             }
         }
