--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -1,3 +1,4 @@
+
 /*--------------------------------------------------------------
 # NW Program Page
 --------------------------------------------------------------*/
@@ -9,38 +10,38 @@
 // @media screen and (max-width: 480px) {
 
 .nw-program-wrapper {
-	max-width: $desktop_width;
+
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
 }
-// fonts
-// h1,
-// h2,
-// h3 {
-// 	font-family: $font_title;
-// 	font-weight: normal;
-// }
-//
-// h1 {
-// 	font-size: 2.25rem;
-// 	line-height: 2.625rem;
-// }
-//
-// h2 {
-// 	font-size: 1.875rem;
-// 	line-height: 2.125rem;
-// }
-//
-// h3 {
-// 	font-size: 1.5rem;
-// 	line-height: 1.6875rem;
-// }
+fonts
+h1,
+h2,
+h3 {
+	font-family: $font_title;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $h1_size_mob;
+	line-height: 2.625rem;
+}
+
+h2 {
+	font-size: $h2_size_mob;
+	line-height: 2.125rem;
+}
+
+h3 {
+	font-size: $h3_size_mob;
+	line-height: 1.6875rem;
+}
 
 p {
-	font-size: 1.625rem;
+	font-size: $font_body_size_mob;
 	line-height: 2.5rem;
 	font-style: $font_body;
 }
@@ -64,34 +65,27 @@ p {
 .nw-program {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
-
-	.why-nw {
-		p {
-			display: block;
-			@include desktop {
-				text-align-last: right;
-			};
-		}
-	}
-
 	.nw-img {
 		display: flex;
 		justify-content: center;
 		margin-top: $basic_margin*5.5;
 		margin-bottom: $basic_margin*3;
-		@include desktop {
-			float: right;
-			width: 900rem;
-			height: 300px;
-		};
 	}
 }
-
-.nw-part1 {
 	@include desktop {
+		.nw-part1 {
 		display: flex;
 		flex-direction: row;
-	};
+		align-items: center;
+		.why-nw{
+			display: block;
+			flex-shrink: 4;
+		}
+		.nw-img {
+			margin-top: 0px;
+			padding-left: 1rem;
+		}
+	}
 }
 // Funding Section
 
@@ -101,7 +95,6 @@ p {
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
-
 	.funding-img,
 	.money-spend-img {
 		display: flex;
@@ -227,12 +220,6 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			// @include tablet {
-			// 	flex: 0.03;
-			// }
-			@include desktop {
-				flex: 1;
-			}
 		}
 
 		.flip-container {
