--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -936,11 +936,7 @@ div .secondary {
 .site-main .home {
   width: 100%;
   height: auto;
-  margin: 0 auto;
   margin: 0 auto; }
-  @media (min-width: 768px) {
-    .site-main .home {
-      padding: 0 90px; } }
   @media (min-width: 768px) {
     .site-main .home {
       padding: 0 90px; } }
@@ -954,13 +950,15 @@ div .secondary {
         height: 555px;
         background-color: rgba(0, 0, 0, 0.74);
         position: relative; } }
-    @media (min-width: 768px) {
-      .site-main .home .home-wrapper .home-img {
-        background-color: rgba(0, 0, 0, 0.74);
-        width: 1264px;
-        height: 555px;
-        z-index: -1;
-        position: absolute; } }
+    .site-main .home .home-wrapper .home-img {
+      height: auto; }
+      @media (min-width: 768px) {
+        .site-main .home .home-wrapper .home-img {
+          background-color: rgba(0, 0, 0, 0.74);
+          width: 1264px;
+          height: 555px;
+          z-index: -1;
+          position: absolute; } }
     .site-main .home .home-wrapper h2 {
       font-family: 'Asap';
       font-size: 36px;
@@ -975,9 +973,7 @@ div .secondary {
       border-bottom: 4px solid #fff; }
       @media (min-width: 768px) {
         .site-main .home .home-wrapper h2 {
-          font-size: 46px;
-          padding-top: 70px;
-          line-height: 0; } }
+          font-size: 46px; } }
     .site-main .home .home-wrapper p {
       height: 160px;
       font-family: "Noto Sans";
@@ -1038,7 +1034,7 @@ div .secondary {
       margin: 20px -60px;
       padding-top: 70px; } }
   .site-main .links-wrapper p {
-    width: 377px;
+    width: 380px;
     font-family: "Noto Sans";
     font-size: 20px;
     line-height: 40px;
@@ -1127,216 +1123,242 @@ div .secondary {
           font-family: "Asap";
           font-size: 48px;
           line-height: 55px;
-          margin: 0;
+          margin: 45px 0px;
           box-sizing: border-box;
-          width: 1283px; } }
-    .site-main .support-wrapper .information .support-img-wrapper {
-      height: auto; }
+          width: 100%;
+          padding: 45px 0px; } }
+    @media (min-width: 768px) {
+      .site-main .support-wrapper .information .support-img-wrapper {
+        height: 0; } }
+    .site-main .support-wrapper .information .support-img-wrapper img {
+      margin: 0 6rem;
+      width: 287px;
+      height: 470px; }
       @media (min-width: 768px) {
-        .site-main .support-wrapper .information .support-img-wrapper {
-          height: 0; } }
-      .site-main .support-wrapper .information .support-img-wrapper img {
-        margin: 0 6rem; }
-        @media (min-width: 768px) {
-          .site-main .support-wrapper .information .support-img-wrapper img {
-            display: -ms-flexbox;
-            display: flex;
-            top: 82rem;
-            position: absolute;
-            right: 35px; } }
-      .site-main .support-wrapper .information .support-img-wrapper p {
-        text-align: center; }
-        @media (min-width: 768px) {
-          .site-main .support-wrapper .information .support-img-wrapper p {
-            display: -ms-flexbox;
-            display: flex;
-            top: 18rem;
-            position: relative;
-            right: -950px;
-            width: 25%; } }
+        .site-main .support-wrapper .information .support-img-wrapper img {
+          height: auto;
+          display: -ms-flexbox;
+          display: flex;
+          position: absolute;
+          right: 0px; } }
+    .site-main .support-wrapper .information .support-img-wrapper p {
+      text-align: center; }
+      @media (min-width: 768px) {
+        .site-main .support-wrapper .information .support-img-wrapper p {
+          display: -ms-flexbox;
+          display: flex;
+          top: 18rem;
+          position: relative;
+          right: -950px;
+          width: 25%;
+          font-size: 18px; } }
     .site-main .support-wrapper .information blockquote {
-      border-left: 6px solid #D93B57;
+      border-left: 14px solid #D93B57;
       font-size: 25px;
       margin-bottom: 95px;
       height: 125px; }
-
-@media (min-width: 768px) and (min-width: 768px) {
-  .site-main .support-wrapper .information blockquote .support-img-wrapper {
-    height: 0; } }
       @media (min-width: 768px) {
-        .site-main .support-wrapper .information blockquote .support-img-wrapper img {
-          margin: 0 6rem; } }
-  @media (min-width: 768px) and (min-width: 768px) {
-    .site-main .support-wrapper .information blockquote .support-img-wrapper img {
-      height: auto;
-      display: -ms-flexbox;
-      display: flex;
-      top: -13rem;
-      position: absolute;
-      right: 35px; } }
-      @media (min-width: 768px) {
-        .site-main .support-wrapper .information blockquote .support-img-wrapper p {
-          text-align: center; } }
-  @media (min-width: 768px) and (min-width: 768px) {
-    .site-main .support-wrapper .information blockquote .support-img-wrapper p {
-      display: -ms-flexbox;
-      display: flex;
-      top: 18rem;
-      position: relative;
-      right: -950px;
-      width: 25%; } }
-      @media (min-width: 768px) {
-        .site-main .support-wrapper .information blockquote blockquote {
+        .site-main .support-wrapper .information blockquote {
           border-left: 6px solid #D93B57;
-          font-size: 25px;
-          margin-bottom: 95px;
-          height: 125px; } }
-  @media (min-width: 768px) and (min-width: 768px) {
-    .site-main .support-wrapper .information blockquote blockquote {
-      border-left: 6px solid #D93B57;
-      margin: 27px 119px;
-      width: 70%;
-      height: auto; }
-      .site-main .support-wrapper .information blockquote blockquote p {
-        font-size: 24px; } }
+          margin: 27px 119px;
+          width: 70%;
+          height: auto;
+          padding: 0px; }
+          .site-main .support-wrapper .information blockquote p {
+            font-size: 24px; } }
+    .site-main .support-wrapper .information p {
+      width: 377px;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      line-height: 46px;
+      color: #000;
+      margin: 40px; }
       @media (min-width: 768px) {
-        .site-main .support-wrapper .information blockquote p {
-          width: 377px;
-          font-family: "Noto Sans";
-          font-size: 20px;
-          line-height: 46px;
-          color: #000;
-          margin: 40px; } }
-  @media (min-width: 768px) and (min-width: 768px) {
-    .site-main .support-wrapper .information blockquote p {
-      width: 61%;
-      font-family: Noto Sans;
-      font-size: 22px;
-      line-height: 47px;
-      letter-spacing: 0.9px;
-      margin: 30px 40px; } }
-      @media (min-width: 768px) {
-          .site-main .support-wrapper .information blockquote p .info {
-            width: 470px;
-            font-family: "Noto Sans";
-            font-size: 26px;
-            font-weight: bold;
-            line-height: 42px;
-            color: #000; }
-        .site-main .support-wrapper .information blockquote .red-btn {
-          width: 185px;
-          height: 47px;
-          background-color: #F76072;
-          border-color: #F76072;
-          border-radius: 6px;
-          color: #fff;
-          margin-left: 20px;
-          padding: 8px;
-          font-family: "Noto Sans";
-          font-size: 20px;
-          font-weight: 300;
-          letter-spacing: 0.8px;
-          height: 47px;
-          display: -ms-flexbox;
-          display: flex; }
-        .site-main .support-wrapper .information blockquote .green-btn {
-          background-color: #4FC8A1;
-          border-color: #4FC8A1;
-          border-radius: 6px;
-          font-family: "Noto Sans";
-          font-size: 20px;
-          font-weight: bold;
-          text-align: center;
-          line-height: 30px;
-          color: #fff;
-          margin-left: 20px;
-          padding: 8px;
-          font-weight: 300;
-          letter-spacing: 0.8px;
-          height: 47px;
-          width: 185px;
-          display: -ms-flexbox;
-          display: flex; } }
-    .site-main .support-wrapper .information .all-features {
-      margin-bottom: 30px; }
-      .site-main .support-wrapper .information .all-features h2 {
-        box-sizing: border-box;
-        width: 440px;
-        border-top: 2px solid #2EB688;
-        padding-top: 50px;
-        height: 42px;
-        font-family: 'Asap';
-        font-size: 36px;
-        line-height: 0;
-        color: #000;
-        margin-left: 30px; }
-        .site-main .support-wrapper .information .all-features h2 .container {
-          margin-left: auto;
-          margin-right: auto;
-          width: 480px; }
-      .site-main .support-wrapper .information .all-features .features-wrapper {
-        /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
-        background: #aff1d3;
-        width: 200px;
-        box-sizing: border-box;
-        height: 139.76px;
-        width: 480.27px;
-        position: relative;
-        border-radius: 10px;
-        font-family: 'Noto Sans';
-        font-size: 15px;
-        color: #000;
-        text-decoration: none; }
-        .site-main .support-wrapper .information .all-features .features-wrapper .features-flipper {
-          position: relative;
-          -webkit-transition: 1.9s;
-          -webkit-transform-style: preserve-3d;
-          -moz-transition: 1.9s;
-          -moz-transform-style: preserve-3d;
-          -o-transition: 1.9s;
-          -o-transform-style: preserve-3d;
-          transition: 1.9s;
-          transform-style: preserve-3d;
-          -ms-flex-pack: distribute;
-              justify-content: space-around;
-          -ms-flex-direction: row;
-              flex-direction: row; }
-          .site-main .support-wrapper .information .all-features .features-wrapper .features-flipper:hover {
-            transform: rotateY(180deg);
-            cursor: pointer; }
-          .site-main .support-wrapper .information .all-features .features-wrapper .features-flipper .front {
-            height: auto;
-            text-align: center;
-            overflow: hidden;
-            padding: 20px;
-            width: 450px;
-            font-family: 'Asap';
+        .site-main .support-wrapper .information p {
+          width: 65%;
+          font-family: 'Noto Sans';
+          line-height: 47px;
+          letter-spacing: 0.9px;
+          margin: 20px 40px; } }
+      .site-main .support-wrapper .information p .info {
+        width: 470px;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        font-weight: bold;
+        line-height: 42px;
+        color: #000; }
+    .site-main .support-wrapper .information .btn {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      width: 65%; }
+      .site-main .support-wrapper .information .btn .red-btn {
+        width: 185px;
+        height: 47px;
+        background-color: #F76072;
+        border-color: #F76072;
+        border-radius: 6px;
+        color: #fff;
+        margin-left: 20px;
+        padding: 8px;
+        font-family: "Noto Sans";
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: 0.8px;
+        height: 47px;
+        display: -ms-flexbox;
+        display: flex; }
+        @media (min-width: 768px) {
+          .site-main .support-wrapper .information .btn .red-btn {
+            color: #fff;
+            margin-left: 80px;
+            font-family: 'Noto Sans';
             font-size: 24px;
+            font-weight: 300;
+            text-shadow: none;
+            letter-spacing: 0.8px;
+            width: 300px;
+            display: block;
             text-align: center;
-            color: #000000;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden; }
-          .site-main .support-wrapper .information .all-features .features-wrapper .features-flipper .features-back {
-            border: 1px solid #248E6A;
-            margin: 0;
-            text-align: center;
-            overflow: hidden;
-            padding: 0;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            position: absolute;
-            bottom: 1px;
-            background-color: #fff;
-            transform: rotateY(180deg); }
-      .site-main .support-wrapper .information .all-features .green-btn {
-        color: #248E6A;
-        text-decoration: none; }
-  .site-main .support-wrapper a {
+            height: 55px; } }
+    .site-main .support-wrapper .information .green-btn {
+      background-color: #4FC8A1;
+      border-color: #4FC8A1;
+      border-radius: 6px;
+      font-family: "Noto Sans";
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      line-height: 30px;
+      color: #fff;
+      margin-left: 20px;
+      padding: 8px;
+      font-weight: 300;
+      letter-spacing: 0.8px;
+      height: 47px;
+      width: 185px;
+      display: -ms-flexbox;
+      display: flex; }
+      @media (min-width: 768px) {
+        .site-main .support-wrapper .information .green-btn {
+          color: #fff;
+          margin-left: 80px;
+          font-family: 'Noto Sans';
+          font-size: 24px;
+          font-weight: 300;
+          text-shadow: none;
+          letter-spacing: 0.8px;
+          width: 300px;
+          display: block;
+          text-align: center;
+          height: 55px; } }
+
+.site-main .all-features {
+  margin-bottom: 30px; }
+  .site-main .all-features h2 {
+    box-sizing: border-box;
+    width: 440px;
+    border-top: 2px solid #2EB688;
+    padding-top: 50px;
+    height: 42px;
+    font-family: 'Asap';
+    font-size: 36px;
+    line-height: 0;
+    color: #000;
+    margin-left: 30px; }
+    .site-main .all-features h2 .container {
+      margin-left: auto;
+      margin-right: auto;
+      width: 480px; }
+  .site-main .all-features .features-wrapper {
+    /* 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45); */
+    width: 200px;
+    box-sizing: border-box;
+    width: 480.27px;
+    position: relative;
+    border-radius: 10px;
+    font-family: 'Noto Sans';
+    font-size: 15px;
+    color: #000;
     text-decoration: none; }
+    .site-main .all-features .features-wrapper .features-flipper {
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+      width: 200px;
+      height: 200px;
+      background-color: #AFF1D3;
+      margin-top: 20px;
+      display: flex;
+      display: -ms-flexbox;
+      -ms-flex-align: center;
+          align-items: center;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      position: relative; }
+      @media (min-width: 768px) {
+        .site-main .all-features .features-wrapper .features-flipper {
+          display: -ms-flexbox;
+          display: flex;
+          width: 300px;
+          height: auto;
+          background-color: #AFF1D3;
+          -webkit-transition: 3s;
+          -webkit-transform-style: preserve-3d;
+          -moz-transition: 2s;
+          -moz-transform-style: preserve-3d;
+          -o-transition: 3s;
+          -o-transform-style: preserve-3d;
+          transition: 3s;
+          transform-style: preserve-3d;
+          border-radius: 10px; }
+          .site-main .all-features .features-wrapper .features-flipper:hover {
+            transform: rotateY(180deg); } }
+      .site-main .all-features .features-wrapper .features-flipper .front {
+        height: auto;
+        text-align: center;
+        overflow: hidden;
+        padding: 20px;
+        width: 450px;
+        font-family: 'Asap';
+        font-size: 24px;
+        text-align: center;
+        color: #000000;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden; }
+        @media (min-width: 768px) {
+          .site-main .all-features .features-wrapper .features-flipper .front {
+            display: -ms-flexbox;
+            display: flex; } }
+      .site-main .all-features .features-wrapper .features-flipper .features-back {
+        border: 1px solid #248E6A;
+        margin: 0;
+        text-align: center;
+        overflow: hidden;
+        padding: 0;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        position: absolute;
+        bottom: 1px;
+        background-color: #fff;
+        transform: rotateY(180deg); }
+        @media (min-width: 768px) {
+          .site-main .all-features .features-wrapper .features-flipper .features-back {
+            display: -ms-flexbox;
+            display: flex; } }
+  .site-main .all-features .green-btn {
+    color: #248E6A;
+    text-decoration: none; }
+
+a {
+  text-decoration: none; }
 
 body {
   background-color: #ffffff; }
 
+/***************************************************/
 .page .contact_info {
   width: 100%;
   margin: 20px; }
