--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # NW Program Page
 --------------------------------------------------------------*/
@@ -41,7 +40,7 @@ h3 {
 }
 
 p {
-	font-size: $font_body_size_mob;
+	font-size: 1.625rem;
 	line-height: 2.5rem;
 	font-style: $font_body;
 }
@@ -65,27 +64,34 @@ p {
 .nw-program {
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
+
+	.why-nw {
+		p {
+			display: block;
+			@include desktop {
+				text-align-last: right;
+			}
+		}
+	}
+
 	.nw-img {
 		display: flex;
 		justify-content: center;
 		margin-top: $basic_margin*5.5;
 		margin-bottom: $basic_margin*3;
+		@include desktop {
+			float: right;
+			width: 900rem;
+			height: 300px;
+		};
 	}
 }
+
+.nw-part1 {
 	@include desktop {
-		.nw-part1 {
 		display: flex;
 		flex-direction: row;
-		align-items: center;
-		.why-nw{
-			display: block;
-			flex-shrink: 4;
-		}
-		.nw-img {
-			margin-top: 0px;
-			padding-left: 1rem;
-		}
-	}
+	};
 }
 // Funding Section
 
@@ -95,6 +101,7 @@ p {
 	margin-top: $basic_margin*3;
 	border-bottom: solid 3px $color_btn_green;
 	padding-bottom: $basic_margin *4.5;
+
 	.funding-img,
 	.money-spend-img {
 		display: flex;
