--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -2284,12 +2284,6 @@ p {
 .nw-program {
   border-bottom: solid 3px #4FC8A1;
   padding-bottom: 2.8125rem; }
-  .nw-program .why-nw p {
-    display: block; }
-    @media (min-width: 768px) {
-      .nw-program .why-nw p {
-        -moz-text-align-last: right;
-             text-align-last: right; } }
   .nw-program .nw-img {
     display: -ms-flexbox;
     display: flex;
@@ -2297,18 +2291,22 @@ p {
         justify-content: center;
     margin-top: 3.4375rem;
     margin-bottom: 1.875rem; }
-    @media (min-width: 768px) {
-      .nw-program .nw-img {
-        float: right;
-        width: 900rem;
-        height: 300px; } }
 
 @media (min-width: 768px) {
   .nw-part1 {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: row;
-        flex-direction: row; } }
+        flex-direction: row;
+    -ms-flex-align: center;
+        align-items: center; }
+    .nw-part1 .why-nw {
+      display: block;
+      -ms-flex-negative: 4;
+          flex-shrink: 4; }
+    .nw-part1 .nw-img {
+      margin-top: 0px;
+      padding-left: 1rem; } }
 
 .funding {
   display: -ms-flexbox;
