--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -9,35 +9,35 @@
 // @media screen and (max-width: 480px) {
 
 .nw-program-wrapper {
-	max-width: $desktop_width;
+
 	height: auto;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
 }
-// fonts
-// h1,
-// h2,
-// h3 {
-// 	font-family: $font_title;
-// 	font-weight: normal;
-// }
-//
-// h1 {
-// 	font-size: 2.25rem;
-// 	line-height: 2.625rem;
-// }
-//
-// h2 {
-// 	font-size: 1.875rem;
-// 	line-height: 2.125rem;
-// }
-//
-// h3 {
-// 	font-size: 1.5rem;
-// 	line-height: 1.6875rem;
-// }
+fonts
+h1,
+h2,
+h3 {
+	font-family: $font_title;
+	font-weight: normal;
+}
+
+h1 {
+	font-size: $h1_size_mob;
+	line-height: 2.625rem;
+}
+
+h2 {
+	font-size: $h2_size_mob;
+	line-height: 2.125rem;
+}
+
+h3 {
+	font-size: $h3_size_mob;
+	line-height: 1.6875rem;
+}
 
 p {
 	font-size: 1.625rem;
@@ -70,7 +70,7 @@ p {
 			display: block;
 			@include desktop {
 				text-align-last: right;
-			};
+			}
 		}
 	}
 
@@ -227,12 +227,6 @@ p {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			// @include tablet {
-			// 	flex: 0.03;
-			// }
-			@include desktop {
-				flex: 1;
-			}
 		}
 
 		.flip-container {
