--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -2,6 +2,7 @@
 # Montessori
 --------------------------------------------------------------*/
 /////*Start History Section**/////
+
 .history-content {
     width: 100%;
     flex-wrap: wrap;
@@ -27,7 +28,7 @@
         display: block;
 
         img {
-          padding-top: 40px;
+            padding-top: 40px;
             float: left;
         }
         @include desktop {
@@ -97,9 +98,11 @@
     }
 }
 ////************philosophy Section ************/////
-.active{
-  visibility: visible;
+
+.active {
+    visibility: visible;
 }
+
 .main-philosophy {
     margin: 100px auto;
     width: 400px;
@@ -243,6 +246,7 @@
 }
 ////************End philosophy Section ************/////
 ////////*******Start Materials Section******/////////
+
 .main-materials div:nth-of-type(3) {
     @include desktop {
         flex-direction: row-reverse;
@@ -402,6 +406,7 @@
     }
 }
 ///Archive and rescourses sections////
+
 .the-archive ul {
     width: 500px;
     line-height: 2.5rem;
@@ -451,10 +456,14 @@
 }
 
 .montessori-archive {
+    border-top: solid 3px $color_btn_green;
+    padding-top: 12px;
+    width: 90%;
+
     h3 {
-        width: 600px;
-        border-top: solid 3px $color_btn_green;
-        padding-top: 12px;
+        @include desktop {
+            width: 600px;
+        };
     }
 }
 ///rotate the arrow and toggle the contents
