--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -2244,8 +2244,7 @@ img {
   -ms-flex-align: center;
       align-items: center; }
 
-fonts
-h1,
+fonts h1,
 h2,
 h3 {
   font-family: "Asap", sans-serif;
@@ -2305,7 +2304,7 @@ p {
       -ms-flex-negative: 4;
           flex-shrink: 4; }
     .nw-part1 .nw-img {
-      margin-top: 0px;
+      margin-top: 0;
       padding-left: 1rem; } }
 
 .funding {
@@ -2330,7 +2329,7 @@ p {
   @media (min-width: 768px) {
     .funding .money-spend-img img {
       padding-right: 4rem;
-      padding-left: .4rem; } }
+      padding-left: 0.4rem; } }
   .funding h2 {
     text-align: center; }
   .funding .nw-part2 {
@@ -2431,6 +2430,14 @@ p {
   display: flex;
   -ms-flex-pack: center;
       justify-content: center; }
+  .teacher-list h1 {
+    width: 40%;
+    padding: 1.7rem;
+    border-top: solid 3px #4FC8A1; }
+  @media (min-width: 768px) {
+    .teacher-list {
+      -ms-flex-direction: column;
+          flex-direction: column; } }
   .teacher-list .teacher-grid {
     display: -ms-flexbox;
     display: flex;
@@ -2438,6 +2445,10 @@ p {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around; }
+    @media (min-width: 768px) {
+      .teacher-list .teacher-grid {
+        -ms-flex-direction: row;
+            flex-direction: row; } }
     .teacher-list .teacher-grid .teacher-block {
       -ms-flex: 33%;
           flex: 33%;
@@ -2447,6 +2458,11 @@ p {
           flex-direction: column;
       -ms-flex-align: center;
           align-items: center; }
+      @media (min-width: 768px) {
+        .teacher-list .teacher-grid .teacher-block {
+          max-width: 990px;
+          -ms-flex: 1;
+              flex: 1; } }
     .teacher-list .teacher-grid .flip-container {
       display: block;
       box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
@@ -2489,6 +2505,12 @@ p {
         text-align: center;
         right: 3px;
         transform: rotateY(180deg); }
+        @media (min-width: 768px) {
+          .teacher-list .teacher-grid .flip-container .back {
+            width: 200px;
+            height: 200px;
+            right: 4px;
+            top: 55px; } }
     .teacher-list .teacher-grid .flip-container.hover .flipper,
     .teacher-list .teacher-grid .flip-container:hover .flipper {
       transform: rotateY(180deg); }
@@ -2497,6 +2519,18 @@ p {
     .teacher-list .teacher-grid .front {
       width: 100px;
       height: 100px; }
+      @media screen and (min-width: 650px) {
+        .teacher-list .teacher-grid .back,
+        .teacher-list .teacher-grid .flip-container,
+        .teacher-list .teacher-grid .front {
+          width: 190px;
+          height: 190px; } }
+      @media (min-width: 768px) {
+        .teacher-list .teacher-grid .back,
+        .teacher-list .teacher-grid .flip-container,
+        .teacher-list .teacher-grid .front {
+          width: 200px;
+          height: 200px; } }
     .teacher-list .teacher-grid .back,
     .teacher-list .teacher-grid .front {
       -webkit-backface-visibility: hidden;
