--- a/themes/montessori-theme/sass/_montessori.scss
+++ b/themes/montessori-theme/sass/_montessori.scss
@@ -185,11 +185,10 @@
             width: 80%;
             color: #248e6a;
             height: auto;
-            overflow: hidden;
             padding: 0;
-            bottom: 14px;
+            bottom: 30px;
             line-height: 0.9rem;
-            right: 10px;
+            right: 22px;
             position: absolute;
 
             a {
@@ -334,7 +333,6 @@
 .benefits li {
     list-style-type: disc;
     @include desktop {
-        // color:red;
     };
 }
 
@@ -469,10 +467,7 @@
 ///rotate the arrow and toggle the contents
 
 .rotate {
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
+  @include rotate(180deg);
 }
 
 .toggle {
@@ -493,7 +488,7 @@
 }
 
 .green-bt {
-    background-color: #4fc8a1;
+    background-color: $color_btn_green;
     @include border-radius (6px);
     letter-spacing: 0.8px;
     display: block;
