--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -1,4 +1,4 @@
-///
+///******extra shared files*****///
 
 .red-border-container {
     width: 90%;
@@ -14,8 +14,7 @@
         margin: 0 auto;
     }
 }
-/// this framework is for the block quotes to make the red bar left
-////**mobile container we will change it when we finish the mobile first **///
+/// this framework is for the block quotes to make the red bar left//
 .content-wrapper {
     border-bottom: solid 3px $color_btn_green;
     max-width: 85%;
@@ -27,7 +26,7 @@
 }
 
 .head-footer-container {
-    max-width: 85%;
+    max-width: 80%;
     margin: 0 auto;
     overflow: auto;
     padding: 0;
