--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -4,8 +4,8 @@ $basic_pading: 0.625rem; /// ==>10px ////
 $basic_margin: 0.625rem; /// ==>10px ////
 $basic_hline_height: 0.625rem; /// ==>10px ////
 ///Screen Size///
-$desktop_width: 959px; //992px
-$tablet_width: 768px; //
+$desktop_width: 768px; //768px
+$desktop_mid_width: 924px; //924px mid size fonts break point
 //Layout//
 $mobile_line_height: 1.5rem;
 $base_spacing_normal: 1rem;
